# hades

./: .clang-format  .clangd  .gitignore  .gitmodules  LICENSE.md  Makefile  README.md  cross_file.txt  hades.code-workspace  meson.build
include/arch/: types.hpp  vmm.hpp
include/arch/x86/: pit.hpp  smp.hpp  types.hpp
include/driver/: ahci.hpp  dtable.hpp  dtable.hpp.in  keyboard.hpp  part.hpp  tty.hpp
include/driver/bus/: pci.hpp
include/driver/net/: arp.hpp  device.hpp  e1000.hpp  icmp.hpp  ip.hpp  protos.hpp  types.hpp  unix.hpp
include/driver/pci/: ahci.hpp
include/driver/tty/: pty.hpp  termios.hpp  tty.hpp
include/driver/video/: bmp.hpp  fbdev.hpp  font-8x16.hpp  vesa.hpp  vt.hpp
include/flanterm/: flanterm.h  flanterm_private.h
include/flanterm/backends/: fb.h  fb.hpp  fb_private.h
include/frg/: allocation.hpp  eternal.hpp  formatting.hpp  hash.hpp  hash_map.hpp  macros.hpp  random.hpp  rbtree.hpp  rcu_radixtree.hpp  string.hpp  vector.hpp
include/fs/: cache.hpp  dev.hpp  ext2.hpp  fat.hpp  poll.hpp  rootfs.hpp  vfs.hpp
include/ipc/: link.hpp  message.hpp  mux.hpp  wire.hpp
include/mm/: arena.hpp  boot.hpp  common.hpp  mm.hpp  pmm.hpp  slab.hpp  vmm.hpp
include/prs/: allocator.hpp  assert.hpp  basic_string.hpp  box.hpp  construct.hpp  deleter.hpp  list.hpp  rbtree.hpp  shared.hpp  string.hpp  unique.hpp  vector.hpp
include/smarter/: smarter.hpp
include/sys/: acpi.hpp  irq.hpp  namespace.hpp  pci.hpp  pit.hpp  runtime.hpp  sched.hpp  smp.hpp  syscall.hpp
include/sys/sched/: mail.hpp  regs.hpp  sched.hpp  signal.hpp  time.hpp  wait.hpp
include/sys/x86/: apic.hpp
include/util/: elf.hpp  font-8x16.hpp  io.hpp  lock.hpp  misc.hpp  ring.hpp  shared.hpp  stivale.hpp  string.hpp  types.hpp
include/util/log/: log.hpp  panic.hpp  qemu.hpp  serial.hpp  vesa.hpp
misc/: initrd
scripts/: do_clean.sh  do_echfs.sh  do_efi.sh  do_imports.sh  do_losetup.sh  do_parts.sh  dtable.py  exec_scripts.sh  fs.sh  net.sh  post.py  syscall.py
source/: entry.cpp
source/asm/: boot.asm  irq.asm  lock.asm  syscall.asm
source/cxx/: entry.cpp
source/cxx/arch/x86/: apic.cpp  copy.cpp  core.cpp  exception.cpp  hpet.cpp  irq.cpp  loader.cpp  pit.cpp  sched.cpp  signal.cpp  smp.cpp  syscall.cpp  time.cpp
source/cxx/arch/x86/bus/: pci.cpp
source/cxx/arch/x86/vmm/: syscall.cpp  vmm.cpp
source/cxx/driver/: ahci.cpp  keyboard.cpp  part.cpp
source/cxx/driver/bus/: pci.cpp
source/cxx/driver/net/: arp.cpp  e1000.cpp  ip.cpp  unix.cpp
source/cxx/driver/pci/: ahci.cpp  net.cpp
source/cxx/driver/tty/: disciplines.cpp  pty.cpp  tty.cpp
source/cxx/driver/video/: fbdev.cpp  vesa.cpp  vt.cpp
source/cxx/flanterm/: flanterm.c  flanterm.cpp
source/cxx/flanterm/backends/: fb.c  fb.cpp
source/cxx/fs/: cache.cpp  dev.cpp  ext2.cpp  fat.cpp  poll.cpp  rootfs.cpp  syscall.cpp  vfs.cpp
source/cxx/ipc/: link.cpp  mux.cpp  wire.cpp
source/cxx/mm/: arena.cpp  boot.cpp  ctx.cpp  mm.cpp  pmm.cpp  slab.cpp  syscall.cpp  vmm.cpp
source/cxx/sys/: acpi.cpp  irq.cpp  laihost.cpp  pci.cpp  pit.cpp  runtime.cpp  sched.cpp  smp.cpp  syscall.cpp
source/cxx/sys/sched/: mail.cpp  management.cpp  sched.cpp  signal.cpp  syscall.cpp  wait.cpp
source/cxx/sys/x86/: apic.cpp
source/cxx/util/: elf.cpp  ring.cpp  string.cpp
source/cxx/util/log/: log.cpp
source/driver/: ahci.cpp
source/fs/: devfs.cpp  fat.cpp  rootfs.cpp  vfs.cpp
source/misc/: limine.cfg  linker.ld  update-limine.sh
source/mm/: mm.cpp
source/sys/: acpi.cpp  pci.cpp  sched.cpp  smp.cpp
source/util/asm/: boot.asm
